[package]
name = "delaymuse" # must be lowercase, this is what `cargo xtask bundle delaymuse` expects
version = "0.1.0"
edition = "2021"
# add the rest of your package fields here

[lib]
name = "delaymuse"
crate-type = ["cdylib"]

[workspace]
members = ["xtask"]
resolver = "2"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master", features = ["widget"] }
# your other deps

#... your [features] etc