[package]
name = "delaymuse"
version = "0.1.0"
edition = "2021"

[lib]
name = "delaymuse"
crate-type = ["cdylib"]

[workspace]
members = ["xtask"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master", features = ["widget"] }
# your other deps

#... your [features] etc