[package]
name = "delaymuse"
version = "0.1.0"
edition = "2021"

[lib]
name = "delaymuse"
crate-type = ["cdylib"]

[workspace]
members = ["xtask"]
resolver = "2"

[dependencies]
# Remove your current nih_plug line and replace it with this:
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# Since you are using egui/eframe, you likely also need to update this:
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# add your other deps below if you need them, but no git = for nih_plug
