[package]
name = "knobmuse_vst3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih-plug = { version = "0.3", features = ["vst3"] }
nih_plug_egui = { version = "0.3" }
egui = "0.27"
atomic_float = "1.0"

[build-dependencies]
nih_plug_xtask = "0.3"

[dependencies.xtask]
package = "xtask"
path = "xtask"